// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders table with few headers correctly: enzyme.shallow 1`] = `
<Styled(table)
  data={
    Object {
      "body": Array [
        Object {
          "band": "metallica",
          "bass": "robert trujillo",
          "drums": "lars ulrich",
          "lead guitar": "kirk hammet",
          "rhythm guitar": "james hatfield",
          "singer": "james hatfield",
        },
        Object {
          "band": "slayer",
          "bass": "tom araya",
          "drums": "paul bostaph",
          "lead guitar": "gary holt",
          "rhythm guitar": "kerry king",
          "singer": "tom araya",
        },
        Object {
          "band": "black sabbath",
          "bass": "geezer butler",
          "drums": "bill ward",
          "lead guitar": "tommy iommi",
          "singer": "ozzy osbourne",
        },
        Object {
          "band": "queen",
          "bass": "john deacon",
          "drums": "roger taylor",
          "keyboard": "freddy mercury",
          "lead guitar": "brian may",
          "singer": "freddy mercury",
        },
        Object {
          "band": "led zeppelin",
          "bass": "john paul johns",
          "drums": "bonzo bonham",
          "keyboard": "john paul johns",
          "lead guitar": "jimmy page",
          "singer": "robert plant",
        },
        Object {
          "band": "deep purple",
          "bass": "roger glover",
          "drums": "ian paice",
          "keyboard": "jon lord",
          "lead guitar": "ritchie blackmore",
          "singer": "ian gillan",
        },
      ],
      "header": Array [
        "band",
        "singer",
        "rhythm guitar",
      ],
    }
  }
  width="auto"
>
  <thead>
    <Styled(tr)>
      <Styled(th)
        key="0"
      >
        <Styled(div)>
          band
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="1"
      >
        <Styled(div)>
          singer
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="2"
      >
        <Styled(div)>
          rhythm guitar
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
    </Styled(tr)>
  </thead>
  <tbody>
    <Styled(tr)
      key="0"
    >
      <Styled(td)
        key="0"
      >
        metallica
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        james hatfield
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        james hatfield
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="1"
    >
      <Styled(td)
        key="0"
      >
        slayer
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        tom araya
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        kerry king
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="2"
    >
      <Styled(td)
        key="0"
      >
        black sabbath
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        ozzy osbourne
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="3"
    >
      <Styled(td)
        key="0"
      >
        queen
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        freddy mercury
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="4"
    >
      <Styled(td)
        key="0"
      >
        led zeppelin
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        robert plant
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="5"
    >
      <Styled(td)
        key="0"
      >
        deep purple
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        ian gillan
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
    </Styled(tr)>
  </tbody>
</Styled(table)>
`;

exports[`renders table with width auto correctly: enzyme.shallow 1`] = `
<Styled(table)
  data={
    Object {
      "body": Array [
        Object {
          "band": "metallica",
          "bass": "robert trujillo",
          "drums": "lars ulrich",
          "lead guitar": "kirk hammet",
          "rhythm guitar": "james hatfield",
          "singer": "james hatfield",
        },
        Object {
          "band": "slayer",
          "bass": "tom araya",
          "drums": "paul bostaph",
          "lead guitar": "gary holt",
          "rhythm guitar": "kerry king",
          "singer": "tom araya",
        },
        Object {
          "band": "black sabbath",
          "bass": "geezer butler",
          "drums": "bill ward",
          "lead guitar": "tommy iommi",
          "singer": "ozzy osbourne",
        },
        Object {
          "band": "queen",
          "bass": "john deacon",
          "drums": "roger taylor",
          "keyboard": "freddy mercury",
          "lead guitar": "brian may",
          "singer": "freddy mercury",
        },
        Object {
          "band": "led zeppelin",
          "bass": "john paul johns",
          "drums": "bonzo bonham",
          "keyboard": "john paul johns",
          "lead guitar": "jimmy page",
          "singer": "robert plant",
        },
        Object {
          "band": "deep purple",
          "bass": "roger glover",
          "drums": "ian paice",
          "keyboard": "jon lord",
          "lead guitar": "ritchie blackmore",
          "singer": "ian gillan",
        },
      ],
      "header": Array [
        "band",
        "singer",
        "rhythm guitar",
        "lead guitar",
        "bass",
        "drums",
        "keyboard",
      ],
    }
  }
  width="auto"
>
  <thead>
    <Styled(tr)>
      <Styled(th)
        key="0"
      >
        <Styled(div)>
          band
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="1"
      >
        <Styled(div)>
          singer
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="2"
      >
        <Styled(div)>
          rhythm guitar
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="3"
      >
        <Styled(div)>
          lead guitar
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="4"
      >
        <Styled(div)>
          bass
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="5"
      >
        <Styled(div)>
          drums
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="6"
      >
        <Styled(div)>
          keyboard
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
    </Styled(tr)>
  </thead>
  <tbody>
    <Styled(tr)
      key="0"
    >
      <Styled(td)
        key="0"
      >
        metallica
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        james hatfield
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        james hatfield
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        kirk hammet
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        robert trujillo
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        lars ulrich
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        none
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="1"
    >
      <Styled(td)
        key="0"
      >
        slayer
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        tom araya
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        kerry king
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        gary holt
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        tom araya
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        paul bostaph
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        none
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="2"
    >
      <Styled(td)
        key="0"
      >
        black sabbath
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        ozzy osbourne
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        tommy iommi
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        geezer butler
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        bill ward
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        none
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="3"
    >
      <Styled(td)
        key="0"
      >
        queen
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        freddy mercury
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        brian may
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        john deacon
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        roger taylor
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        freddy mercury
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="4"
    >
      <Styled(td)
        key="0"
      >
        led zeppelin
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        robert plant
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        jimmy page
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        john paul johns
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        bonzo bonham
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        john paul johns
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="5"
    >
      <Styled(td)
        key="0"
      >
        deep purple
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        ian gillan
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        ritchie blackmore
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        roger glover
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        ian paice
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        jon lord
      </Styled(td)>
    </Styled(tr)>
  </tbody>
</Styled(table)>
`;

exports[`renders table with width stretched correctly: enzyme.shallow 1`] = `
<Styled(table)
  data={
    Object {
      "body": Array [
        Object {
          "band": "metallica",
          "bass": "robert trujillo",
          "drums": "lars ulrich",
          "lead guitar": "kirk hammet",
          "rhythm guitar": "james hatfield",
          "singer": "james hatfield",
        },
        Object {
          "band": "slayer",
          "bass": "tom araya",
          "drums": "paul bostaph",
          "lead guitar": "gary holt",
          "rhythm guitar": "kerry king",
          "singer": "tom araya",
        },
        Object {
          "band": "black sabbath",
          "bass": "geezer butler",
          "drums": "bill ward",
          "lead guitar": "tommy iommi",
          "singer": "ozzy osbourne",
        },
        Object {
          "band": "queen",
          "bass": "john deacon",
          "drums": "roger taylor",
          "keyboard": "freddy mercury",
          "lead guitar": "brian may",
          "singer": "freddy mercury",
        },
        Object {
          "band": "led zeppelin",
          "bass": "john paul johns",
          "drums": "bonzo bonham",
          "keyboard": "john paul johns",
          "lead guitar": "jimmy page",
          "singer": "robert plant",
        },
        Object {
          "band": "deep purple",
          "bass": "roger glover",
          "drums": "ian paice",
          "keyboard": "jon lord",
          "lead guitar": "ritchie blackmore",
          "singer": "ian gillan",
        },
      ],
      "header": Array [
        "band",
        "singer",
        "rhythm guitar",
        "lead guitar",
        "bass",
        "drums",
        "keyboard",
      ],
    }
  }
  width="stretched"
>
  <thead>
    <Styled(tr)>
      <Styled(th)
        key="0"
      >
        <Styled(div)>
          band
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="1"
      >
        <Styled(div)>
          singer
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="2"
      >
        <Styled(div)>
          rhythm guitar
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="3"
      >
        <Styled(div)>
          lead guitar
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="4"
      >
        <Styled(div)>
          bass
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="5"
      >
        <Styled(div)>
          drums
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
      <Styled(th)
        key="6"
      >
        <Styled(div)>
          keyboard
          <Styled(div)>
            <Button
              icon={
                <Icon
                  color="#f6f6f6"
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
            <Button
              icon={
                <Icon
                  icon="ChevronSvg"
                  size="xs"
                />
              }
              iconDirection="left"
              isDisabled={false}
              mode="flat"
              onClick={[Function]}
              size="s"
              stretched={false}
              type="secondary"
            />
          </Styled(div)>
        </Styled(div)>
      </Styled(th)>
    </Styled(tr)>
  </thead>
  <tbody>
    <Styled(tr)
      key="0"
    >
      <Styled(td)
        key="0"
      >
        metallica
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        james hatfield
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        james hatfield
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        kirk hammet
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        robert trujillo
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        lars ulrich
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        none
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="1"
    >
      <Styled(td)
        key="0"
      >
        slayer
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        tom araya
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        kerry king
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        gary holt
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        tom araya
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        paul bostaph
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        none
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="2"
    >
      <Styled(td)
        key="0"
      >
        black sabbath
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        ozzy osbourne
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        tommy iommi
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        geezer butler
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        bill ward
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        none
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="3"
    >
      <Styled(td)
        key="0"
      >
        queen
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        freddy mercury
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        brian may
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        john deacon
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        roger taylor
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        freddy mercury
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="4"
    >
      <Styled(td)
        key="0"
      >
        led zeppelin
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        robert plant
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        jimmy page
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        john paul johns
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        bonzo bonham
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        john paul johns
      </Styled(td)>
    </Styled(tr)>
    <Styled(tr)
      key="5"
    >
      <Styled(td)
        key="0"
      >
        deep purple
      </Styled(td)>
      <Styled(td)
        key="1"
      >
        ian gillan
      </Styled(td)>
      <Styled(td)
        key="2"
      >
        none
      </Styled(td)>
      <Styled(td)
        key="3"
      >
        ritchie blackmore
      </Styled(td)>
      <Styled(td)
        key="4"
      >
        roger glover
      </Styled(td)>
      <Styled(td)
        key="5"
      >
        ian paice
      </Styled(td)>
      <Styled(td)
        key="6"
      >
        jon lord
      </Styled(td)>
    </Styled(tr)>
  </tbody>
</Styled(table)>
`;
